--- a/app/src/main/res/layout/fragment_lista_tema.xml
+++ b/app/src/main/res/layout/fragment_lista_tema.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentListaTema">
 
+    <ScrollView
+        android:layout_width="400dp"
+        android:layout_height="200dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" />
+    </ScrollView>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerId"
         android:layout_width="match_parent"
