--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -11,11 +11,12 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/idImagen"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher"
             android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_marginRight="10dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
