--- a/app/src/main/res/layout-land/fragment_detalle_tema.xml
+++ b/app/src/main/res/layout-land/fragment_detalle_tema.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical"
     tools:context=".fragments.FragmentDetalleTema">
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -19,7 +18,7 @@
                 android:id="@+id/imageDetalleId"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/logo"
                 android:scaleType="fitXY"
                 android:layout_marginBottom="10dp"/>
 
@@ -27,14 +26,14 @@
                 android:id="@+id/decripcionId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Descripción"/>
+                android:layout_gravity="center_horizontal"
 
+                android:text=""/>
 
 
         </LinearLayout>
 
     </ScrollView>
-
 
 
 </LinearLayout>
