--- a/app/src/main/res/layout-land/fragment_lista_tema.xml
+++ b/app/src/main/res/layout-land/fragment_lista_tema.xml
@@ -8,6 +8,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerId"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
