--- a/app/src/main/res/layout-land/item_list.xml
+++ b/app/src/main/res/layout-land/item_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
@@ -12,10 +12,9 @@
 
         <ImageView
             android:id="@+id/idImagen"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@mipmap/ic_launcher"
-            android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"/>
 
         <LinearLayout
@@ -29,29 +28,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Titulo"
-                android:textSize="25dp"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 />
 
-            <TextView
-                android:id="@+id/idInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Descripción"
-                android:layout_marginBottom="15dp"
-                android:layout_marginRight="10dp"
-                android:layout_margin="10dp"
-                android:textAppearance="?attr/textAppearanceListItem" />
+
         </LinearLayout>
     </LinearLayout>
 
     <TextView
-
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
         android:background="@color/colorPrimary"
         android:layout_below="@+id/idImagen"
-        android:layout_marginTop="11dp"/>
+        android:layout_marginRight="0.5dp"/>
 
 </LinearLayout>
 
